Updatable Z Offset in bltouch config

--- a/Bltouch/printer.cfg
+++ b/Bltouch/printer.cfg
@@ -136,6 +136,9 @@ heating_gain: 2
 #*# pid_ki = 0.736
 #*# pid_kd = 1421.398
 #*#
+#*# [bltouch]
+#*# z_offset = 0.450
+#*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
