Added marlin M303. All G and M macro command now in MarlinSupport.cfg

--- a/Bltouch/KP5L/macros/Base.cfg
+++ b/Bltouch/KP5L/macros/Base.cfg
@@ -1,47 +1,7 @@
-[gcode_macro M900]
-description: Set pressure advance
+[delayed_gcode bed_mesh_init]
+initial_duration: .01
 gcode:
-  SET_PRESSURE_ADVANCE ADVANCE={params.K|default(0)}
-
-[gcode_macro G29]
-gcode:
-  {% set BED_MESH_PROFILE_NAME = params.BED_MESH_PROFILE_NAME|default("default") %}
-  {% if printer.idle_timeout.state == "Printing" %}
-    {action_respond_info("This command cannot be used while printing")}
-  {% elif printer.toolhead.homed_axes != "xyz" %}
-    G28
-  {% endif  %}
-    BED_MESH_PROFILE REMOVE={BED_MESH_PROFILE_NAME}
-    BED_MESH_CALIBRATE SAVE={BED_MESH_PROFILE_NAME}
-    SAVE_CONFIG
-
-
-[gcode_macro MANUAL_MESH_START]
-GCODE:
-     G28
-     BED_MESH_CALIBRATE METHOD=MANUAL
-     TESTZ Z=-5
-	
-[gcode_macro DECREASE_Z_POS]
-GCODE:
-     TESTZ Z=-0.025
-	
-[gcode_macro INCREASE_Z_POS]
-GCODE:
-     TESTZ Z=0.025
-	
-[gcode_macro NEXT_PROBE_POS]
-GCODE:
-     ACCEPT
-     TESTZ Z=-5
-
-[gcode_macro CANCEL_PRINT]
-rename_existing: BASE_CANCEL_PRINT
-gcode:
-    TURN_OFF_HEATERS
-    CLEAR_PAUSE
-    SDCARD_RESET_FILE
-    BASE_CANCEL_PRINT
+  BED_MESH_PROFILE LOAD=default
 
 [gcode_macro PAUSE]
 rename_existing: PAUSE_BASE
@@ -81,7 +41,7 @@ gcode:
 rename_existing: BASE_CANCEL_PRINT
 variable_execute: 'false'
 gcode:
-  ##### end of definitions #####
+  G1 E-2 F300    ;retract the filament slightly
   SET_GCODE_VARIABLE MACRO=CANCEL_PRINT VARIABLE=execute VALUE='"true"'
   TURN_OFF_HEATERS
   CLEAR_PAUSE
@@ -127,19 +87,18 @@ gcode:
         G1 X-{length} E{extrude} F{feedrate}                                    # draw the 2nd line
     {% endif %}
     RESTORE_GCODE_STATE NAME=PRIME_LINE_STATE
-
+  
 [gcode_macro PID_Bed]
 gcode:
-  {% set T = params.T|default(65) %}
+  {% set TEMP = params.TEMP|default(65)|int %}
   G28
-  G1 Z5
+  G1 Z20
   M106 S127
-  PID_CALIBRATE HEATER=heater_bed TARGET=60
+  PID_CALIBRATE HEATER=heater_bed TARGET={TEMP}
 
 [gcode_macro PID_Extruder]
 gcode:
-  {% set T = params.T|default(230) %}
+  {% set TEMP = params.TEMP|default(230)|int %}
   G28
-  G1 Z5
-  PID_CALIBRATE HEATER=extruder TARGET=230
-  
+  G1 Z20
+  PID_CALIBRATE HEATER=extruder TARGET={TEMP}
