Added more Marlin commands and added acceleration to auto-generation field

--- a/KP5L/macros/MarlinSupport.cfg
+++ b/KP5L/macros/MarlinSupport.cfg
@@ -1,3 +1,8 @@
+[gcode_macro G27]
+description: Park head
+gcode:
+    PARK
+
 [gcode_macro G29]
 description: Bed mesh calibration
 gcode:
@@ -11,29 +16,120 @@ gcode:
     BED_MESH_CALIBRATE SAVE={BED_MESH_PROFILE_NAME}
     SAVE_CONFIG
 
-[gcode_macro M303]
-description: PID Calibration
+
+[gcode_macro M76]
+description: Pause
 gcode:
-  {% set E = params.E|default(0)|int %}
-  {% set S = params.S|default(0)|int %}
-# Extruder 1
-  {% if E == 0%}
-    {% if S == 0%}
-      PID_Extruder
+    PAUSE
+
+[gcode_macro M92]
+gcode:
+    {% set extruder_steps = params.E|default(0.0025)|float %}
+    SET_EXTRUDER_STEP_DISTANCE DISTANCE={extruder_steps}
+
+[gcode_macro M125]
+description: Park head
+gcode:
+    PARK
+
+[gcode_macro M201]
+gcode:
+    # Do nothing
+
+[gcode_macro M204]
+rename_existing: M204.0
+gcode:
+    {% set factor = params.F|default(0.5)|float %}
+    {% if 'S' in params %}
+       SET_VELOCITY_LIMIT ACCEL={params.S} ACCEL_TO_DECEL={ params.S|float * factor }
     {% else %}
-      PID_Extruder TEMP={S}
+        {% if 'P' in params %}
+            {% if 'T' in params %}
+                {% if P|int < T|int %}
+                    SET_VELOCITY_LIMIT ACCEL={params.P} ACCEL_TO_DECEL={ params.P|float * factor }
+                {% else %}
+                    SET_VELOCITY_LIMIT ACCEL={params.T} ACCEL_TO_DECEL={ params.T|float * factor }
+                {% endif %}
+            {% else %}
+                SET_VELOCITY_LIMIT ACCEL={params.P} ACCEL_TO_DECEL={ params.P|float * factor }
+            {% endif %}
+        {% elif 'T' in params %}
+            SET_VELOCITY_LIMIT ACCEL={params.T} ACCEL_TO_DECEL={ params.T|float * factor }
+        {% endif %}
     {% endif %}
-  {% endif %}
-#Bed
-  {% if E == -1%}
-    {% if S == 0%}
-      PID_Bed
-    {% else %}
-      PID_Bed TEMP={S}
+
+[gcode_macro M205]
+description: Set JD or Jerk
+gcode:
+    {% if 'J' in params %}
+        SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={params.J}
+    {% elif 'X' in params %}
+        SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={params.X}
+    {% elif 'Y' in params %}
+        SET_VELOCITY_LIMIT SQUARE_CORNER_VELOCITY={params.Y}
     {% endif %}
-  {% endif %}
+
+[gcode_macro M207]
+description: Set Firmware Retraction
+gcode:
+    {% set length = params.S|default(0.5)|float %}
+    {% set speed = params.F|default(25)|float %}
+    SET_RETRACTION RETRACT_LENGTH={length} RETRACT_SPEED={speed}
+
+[gcode_macro M300]
+gcode:
+    BEEP
+
+[gcode_macro M303]
+gcode:
+    {% if 'E' in params %}
+        {% set heater = params.E|default(0)|int %}
+        {% set temp = params.T|default(0)|float %}
+        {% if heater == 0 %}                                                    # extruder
+            {% if temp >= printer.configfile.settings.extruder.min_extrude_temp|float %}
+                {% if temp <= printer.configfile.settings.extruder.max_temp|float %}
+                    PID_CALIBRATE HEATER=extruder TARGET={temp}
+                {% endif %}
+            {% endif %}
+        {% elif heater == -1 %}                                                 # bed
+            {% if temp <= printer.configfile.settings.heater_bed.max_temp|float %}
+                PID_CALIBRATE HEATER=heater_bed TARGET={temp}
+            {% endif %}
+        {% endif %}
+    {% endif %}
+
+[gcode_macro M486]
+gcode:
+    # Do nothing
+
+[gcode_macro M500]
+description: Save config
+gcode:
+    SAVE_CONFIG
+
+[gcode_macro M600]
+description: Change filament
+gcode:
+    FILAMENT_CHANGE
+
+[gcode_macro M601]
+description: Pause
+gcode:
+    PAUSE
+
+[gcode_macro M701]
+description: Load filament
+gcode:
+    FILAMENT_LOAD
+
+[gcode_macro M702]
+description: Unload filament
+gcode:
+    FILAMENT_UNLOAD
 
 [gcode_macro M900]
-description: Set pressure advance
+description: set presure advance (Liniar advance)
 gcode:
-  SET_PRESSURE_ADVANCE ADVANCE={params.K|default(0)}
+    {% if 'K' in params %}
+        SET_PRESSURE_ADVANCE ADVANCE={ params.K|float }
+    {% endif %}
