--- a/printer.cfg
+++ b/printer.cfg
@@ -4,12 +4,8 @@
 
 [printer]
 kinematics: cartesian
-max_velocity: 200
-max_accel: 800
-max_accel_to_decel: 800
 max_z_velocity: 5
 max_z_accel: 200
-square_corner_velocity: 5
 
 [input_shaper]
 shaper_freq_x: 61.6570
@@ -126,26 +122,32 @@ heating_gain: 2
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 17.889
-#*# pid_ki = 0.828
-#*# pid_kd = 96.599
+#*# pid_kp = 20.253
+#*# pid_ki = 1.023
+#*# pid_kd = 100.251
 #*#
 #*# [heater_bed]
 #*# control = pid
-#*# pid_kp = 64.682
-#*# pid_ki = 0.736
-#*# pid_kd = 1421.398
+#*# pid_kp = 73.115
+#*# pid_ki = 0.945
+#*# pid_kd = 1414.780
 #*#
 #*# [bltouch]
-#*# z_offset = 0.450
+#*# z_offset = 0.500
+#*#
+#*# [printer]
+#*# max_velocity = 200
+#*# max_accel = 1500
+#*# max_accel_to_decel = 750
+#*# square_corner_velocity = 10
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  -0.074375, -0.041250, 0.000000, 0.100000
-#*# 	  0.001875, 0.048125, 0.068125, 0.087500
-#*# 	  0.103750, 0.060625, 0.037500, 0.000625
-#*# 	  -0.076875, -0.060000, 0.004375, 0.049375
+#*# 	  -0.262500, -0.130625, 0.000000, 0.191250
+#*# 	  -0.599375, -0.505000, -0.358750, -0.090625
+#*# 	  -0.796875, -0.756250, -0.634375, -0.436250
+#*# 	  -1.138750, -1.045625, -0.835000, -0.615000
 #*# x_count = 4
 #*# y_count = 4
 #*# mesh_x_pps = 2
