--- a/KP5L/extruder.cfg
+++ b/KP5L/extruder.cfg
@@ -7,6 +7,7 @@ microsteps: 32
 rotation_distance: 7.940
 nozzle_diameter: 0.400
 filament_diameter: 1.750
+max_extrude_only_distance: 100
 max_extrude_only_velocity: 50
 max_extrude_only_accel: 800
 heater_pin: PC3
@@ -18,6 +19,8 @@ sensor_pin: PC1
 #pid_Kd: 67.5
 min_temp: 0
 max_temp: 270
+pressure_advance: 0.200000
+pressure_advance_smooth_time: 0.040000
 
 [thermistor TL NTC100K B3950]
 ## values calibrated against a PT100 reference
