--- a/KP5L/macros/Base.cfg
+++ b/KP5L/macros/Base.cfg
@@ -4,38 +4,71 @@ gcode:
   BED_MESH_PROFILE LOAD=default
 
 [gcode_macro PAUSE]
-rename_existing: PAUSE_BASE
+variable_retract: 2
+rename_existing: BASE_PAUSE
 gcode:
-  {% set E = params.E|default(1.7) %}
-;  {% set x_park = printer.toolhead.axis_maximum.x|float - 5.0 %}
-;  {% set y_park = printer.toolhead.axis_maximum.y|float - 5.0 %}
-  {% set x_park = printer.toolhead.axis_minimum.x|float + 5.0 %}
-  {% set y_park = printer.toolhead.axis_minimum.y|float + 5.0 %}
-  {% set max_z = printer.toolhead.axis_maximum.z|float %}
-  {% set act_z = printer.toolhead.position.z|float %}
-  {% if act_z < (max_z - 2.0) %}
-      {% set z_safe = 2.0 %}
-  {% else %}
-      {% set z_safe = max_z - act_z %}
-  {% endif %}
-  SAVE_GCODE_STATE NAME=PAUSE_state
-  PAUSE_BASE
-  G91
-  G1 E-{E} F2100
-  G1 Z{z_safe} F900
-  G90
-  G0 X{x_park} Y{y_park} F3000
-  G91
+    {% set E = printer["gcode_macro PAUSE"].retract|float %}
+    SAVE_GCODE_STATE NAME=PAUSE_STATE
+    BASE_PAUSE
+    G91
+    G1 E-{E} F1500                                                              # retract
+    G90
+    PARK
 
 [gcode_macro RESUME]
-rename_existing: RESUME_BASE
+rename_existing: BASE_RESUME
 gcode:
-    {% set E = params.E|default(1) %}
+    {% set E = printer["gcode_macro PAUSE"].retract|float %}
     G91
-    G1 E{E} F2100
+    G1 E{E} F1500                                                               # unretract
     G90
-    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
-    RESUME_BASE
+    RESTORE_GCODE_STATE NAME=PAUSE_STATE MOVE=1
+    BASE_RESUME
+
+[gcode_macro CANCEL_PRINT]
+rename_existing: BASE_CANCEL_PRINT
+gcode:
+    {% set E = printer["gcode_macro PAUSE"].retract|float %}
+    G91
+    G1 E{E} F1500 
+    G90
+    TURN_OFF_HEATERS
+    M107                                                              # turn off fan
+    CLEAR_PAUSE
+    SDCARD_RESET_FILE
+    BASE_CANCEL_PRINT
+    PARK
+
+[gcode_macro PARK]
+gcode:
+    {% set x_park = params.X|default(0)|float %}
+    {% set y_park = params.Y|default(150)|float %}
+    {% set z_park = params.Z|default(10)|float + printer.toolhead.position.z|float %}
+    {% set x_max = printer.toolhead.axis_maximum.x|float %}
+    {% set y_max = printer.toolhead.axis_maximum.y|float %}
+    {% set z_max = printer.toolhead.axis_maximum.z|float %}
+    {% if x_park > x_max %}
+        {% set x_park = x_max %}
+    {% endif %}
+    {% if y_park > y_max %}
+        {% set y_park = y_max %}
+    {% endif %}
+    {% if z_park > z_max %}
+        {% set z_park = z_max %}
+    {% endif %}
+    SAVE_GCODE_STATE NAME=PARK_STATE
+    G90                                                                         # absolute positioning
+    G1 Z{z_park} F1500
+    G1 X{x_park} Y{y_park} F5000
+    RESTORE_GCODE_STATE name=PARK_STATE
+
+[gcode_macro BEEP]
+gcode:
+    {% set frequency = params.S|default(1000)|float %}
+    {% set duration = params.P|default(100)|float %}
+    SET_PIN PIN=BEEPER_pin VALUE={frequency}
+    G4 P{duration}
+    SET_PIN PIN=BEEPER_pin VALUE=0
 
 [gcode_macro CANCEL_PRINT]
 rename_existing: BASE_CANCEL_PRINT
@@ -48,57 +81,3 @@ gcode:
   SDCARD_RESET_FILE
   M117 Cancel
   BASE_CANCEL_PRINT
-
-
-[gcode_macro PRIME_LINE]
-#PrusaSliser: PRIME_LINE F={first_layer_speed}
-#Cura: PRIME_LINE F={speed_print_layer_0}
-gcode:
-    {% set feedrate = params.F|default(20)|float * 60 %}
-    {% set length = params.L|default(120)|float %}
-    {% if 'Y' in params %}
-        {% set length_max = ( printer.toolhead.axis_maximum.y|float - 10.0 ) %}
-    {% else %}
-        {% set length_max = ( printer.toolhead.axis_maximum.x|float - 10.0 ) %}
-    {% endif %}
-    {% if length > length_max %}
-        {% set length = length_max %}
-    {% endif %}
-    {% set width = printer.configfile.settings.extruder.nozzle_diameter|float %}
-    {% set height = ( (width / 0.04)|int - (width / 0.04 / 4)|int )|float * 0.04 %}
-    {% set extrude = 1.5 * length * width * height / 2.4 %}
-    SAVE_GCODE_STATE NAME=PRIME_LINE_STATE
-    SET_IDLE_TIMEOUT TIMEOUT=7200
-    {% if 'Y' in params %}
-        {% set x_start = 5.0 %}
-        {% set y_start = (printer.toolhead.axis_maximum.y|float - length) / 2 %}
-        G0 X{x_start} Y{y_start} Z{height} F5000                                # move to start position
-        G91                                                                     # relative positioning
-        G1 Y{length} E{extrude} F{feedrate}                                     # draw the 1st line
-        G1 X{width} F5000                                                       # move to the next line
-        G1 Y-{length} E{extrude} F{feedrate}                                    # draw the 2nd line
-    {% else %}
-        {% set x_start = (printer.toolhead.axis_maximum.x|float - length) / 2 %}
-        {% set y_start = 5.0 %}
-        G0 X{x_start} Y{y_start} Z{height} F5000                                # move to start position
-        G91                                                                     # relative positioning
-        G1 X{length} E{extrude} F{feedrate}                                     # draw the 1st line
-        G1 Y{width} F5000                                                       # move to the next line
-        G1 X-{length} E{extrude} F{feedrate}                                    # draw the 2nd line
-    {% endif %}
-    RESTORE_GCODE_STATE NAME=PRIME_LINE_STATE
-  
-[gcode_macro PID_Bed]
-gcode:
-  {% set TEMP = params.TEMP|default(65)|int %}
-  G28
-  G1 Z20
-  M106 S127
-  PID_CALIBRATE HEATER=heater_bed TARGET={TEMP}
-
-[gcode_macro PID_Extruder]
-gcode:
-  {% set TEMP = params.TEMP|default(230)|int %}
-  G28
-  G1 Z20
-  PID_CALIBRATE HEATER=extruder TARGET={TEMP}
